--- a/pinclean.html
+++ b/pinclean.html
@@ -2,9 +2,6 @@
 <html>
 <title>Privacy Policy</title>
 <body>
-<div class="banner">
-<img src="images/web_banner2.jpg" height="150px">
-</div>
 <div class="main-content">
 	<div class="content-title">
 		Privacy Policy
@@ -73,7 +70,7 @@
 	body {
 		margin: 0;;
 		font-size: 16px;
-		font-family: "Microsoft YaHei";
+		font-family: "DroidSans";
 	}
 	body a {
 		text-decoration: none;
