--- a/pinboost.html
+++ b/pinboost.html
@@ -70,7 +70,7 @@
 	body {
 		margin: 0;;
 		font-size: 16px;
-		font-family: "Microsoft YaHei";
+		font-family: "DroidSans";
 	}
 	body a {
 		text-decoration: none;
